Added spyscroll and scroll animation

--- a/style.css
+++ b/style.css
@@ -1,268 +1,81 @@
-body{
-    background-color: rgb(56, 53, 53);
-}
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,800&display=swap');
 
-.quantitysubmit{
-    margin: auto;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    
-    
-}
-
-
-/* -- quantity box -- */
-
-.quantity {
- display: inline-block; 
-  
-  
-
-}
-
-.quantity .input-text.qty {
- width: 35px;
- height: 39px;
- padding: 0 5px;
- text-align: center;
- background-color: transparent;
- border: 0px solid #efefef;
-}
-
-.quantity.buttons_added {
- text-align: left;
-
- position: relative;
- white-space: nowrap;
- vertical-align: top; 
-box-shadow: 0px 0px 3px 0 #3763f4;}
-
-.quantity.buttons_added input {
- display: inline-block;
- margin: 0;
- vertical-align: top;
- box-shadow: none;
-}
-
-.quantity.buttons_added .minus,
-.quantity.buttons_added .plus {
- padding: 7px 10px 8px;
- height: 41px;
- background-color: #ffffff;
- border: 1px solid #efefef;
- cursor:pointer;}
-
-.quantity.buttons_added .minus {
- border-right: 0; }
-
-.quantity.buttons_added .plus {
- border-left: 0; }
-
-.quantity.buttons_added .minus:hover,
-.quantity.buttons_added .plus:hover {
- background: #eeeeee; }
-
-.quantity input::-webkit-outer-spin-button,
-.quantity input::-webkit-inner-spin-button {
- -webkit-appearance: none;
- -moz-appearance: none;
- margin: 0; }
- 
- .quantity.buttons_added .minus:focus,
-.quantity.buttons_added .plus:focus {
- outline: none; }
-
-
-
-
-.item {
+body {
     margin: 0;
-    padding: 0;
+    font-family: Arial, sans-serif;
+  }
+
+  .section {
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    font-family: 'Poppins', sans-serif;
-    background: white;
-}
-
-
-.tainer {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    box-shadow: 0px 0px 30px 0 #3763f4;
-    
-    background: #fff;
-    margin: 20px;
-}
-/* height must be roughly 550px */
-.tainer .imgBx {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 100%;
-    background: #3763f4 !important;
-    transition: .3s linear;
-}
-
-.tainer .imgBx:before {
-    content: 'Abstract Solutions';
-    position: absolute;
-    top: 0px;
-    left: 24px;
-    color: white !important;
-    opacity: 0.2;
-    font-size: 4em;
-    font-weight: 800;
-    font-style: italic;
-}
-
-.tainer .imgBx img {
-    position: relative;
-    transform: rotate(-30deg);
-    left: -50px;
-    animation: .5s  ease-in 0s 1 slideInLeft;
-}
-
-.tainer .details {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 100%;
-    box-sizing: border-box;
-    padding: 40px;
-}
-
-.tainer .details h2{
-    margin: 0;
-    padding: 0;
-    font-size: 2.4em;
-    line-height: 1em;
-    color: #444;
-}
-
-.tainer .details h2 span {
-    font-size: 0.4em;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #999;
-}
-
-.tainer .details p {
-    max-width: 85%;
-    margin-left: 15%;
-    color: #333;
-    font-size: 15px;
-    margin-bottom: 36px;
-}
-
-.tainer .details h3 {
-    margin: 0;
-    padding: 0;
-    font-size: 2.5em;
-    color: #a2a2a2;
-    float: left;
-}
-.tainer .details button {
-    background: #3763f4;
+    font-size: 1rem;
     color: white;
-    border: none;
-    outline: none;
-    padding: 15px 20px;
-    margin-top: 5px;
-    font-size: 16px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    font-weight: 600;
-    border-radius: 40px;
-    float: right;
-    box-shadow: 0px 0px 8px 0 #3763f4;
+    
+  }
+  
+  #intro {
+    background-color: rgb(56, 53, 53);  }
+  
+  #projects {
+    background-color: rgb(56, 53, 53);  }
+  
+  #contact {
+    background-color: rgb(56, 53, 53);  }
+  
+  .hidden {
+    opacity: 0;
+    transform: translateX(20%);
+    transition: opacity 1s, transform 1.5s;
+  }
+  
+  .visible {
+    opacity: 1;
+    
+    transform: translateX(0);
+  }
+
+.navbar{
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 50px;
+    display: flex;
+    padding-top: 10px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(56, 53, 53);
+    
+}
+.navbar li{
+  margin:20px;
+  border-radius: 6px;
+  padding: 5px;
+  height: 30px;
+  width: 100px;
+  border:1px solid transparent;
+  align-items: center;
+  justify-content: center;
+  color: rgb(56, 53, 53);
+  
+}
+.active{
+  border-radius: 6px;
+  padding: 5px;
+  height: 30px;
+  width: 100px;
+  border:3px solid white;
+  align-items: center;
+  justify-content: center;
+  color: rgb(56, 53, 53);
 }
 
-.product-colors span {
-    width: 26px;
-    height: 26px;
-    top: 7px;
-    margin-right: 12px;
-    left: 10px;
-    border-radius: 50%;
-    position: relative;
-    cursor: pointer;
-    display: inline-block;
-}
-
-.black {
-    background: #000;
-}
-
-.red {
-    background: #D5212E;
-}
-
-.orange {
-    background: #F18557;
-}
-
-
-.parent {
-display: flex;
-flex-wrap: wrap;
+.navbar li a{
+  text-decoration: none;
+  color: aliceblue;
 
 }
-.child {
-flex: 1 0 21%;
-margin: 5px;
-height: 100px;
-background-color: blue;
-
+.navbar *{
+  display: inline-flex;
 }
-
-
-
-
-
-@media (max-width: 1080px) {
-    .container {
-        height: auto;
-    }
-    .container .imgBx {
-        padding: 40px;
-        box-sizing: border-box;
-        width: 100% !important;
-        height: auto;
-        text-align: center;
-        overflow: hidden;
-    }
-    .container .imgBx img {
-        left: initial;
-        max-width: 100%;
-        transform: rotate(0deg);
-    }
-    .details {
-        width: 100% !important;
-        height: auto;
-        padding: 20px;
-    }
-    .container .details p {
-        margin-left: 0;
-        max-width: 100%;
-    }
-}
-@keyframes slideInLeft {
-        0% {
-          transform: rotate(-30deg);
-          opacity: 0;
-        }
-        100% {
-          transform: rotate(-30deg);
-          opacity:1;
-        }
-      }
-
